2003/09/16 23:50 rwmcfa1

	* Makefile.PL, perl-*spec.in: somewhat automated versioning system 
	implemented for depenancy modules

2003/09/15 22:26 rwmcfa1

	* Makefile.PL: spec file dependancies improved

2003/09/11 21:02 rwmcfa1
	
	* xs/GnomePrintUnit.xs, xs/GnomePrintConfig.xs: PREFIX added/moved.

	* xs/GnomeFontFace.xs: PREFIX added, gnome_font_face_get_glyph_kerning
	commented out, the func is declaired in the header files, but not in 
	the .so libs on redhat 9 with libgnomeprint(ui)-2.2.

2003/09/10 14:24 ebassi
	
	* xs/GnomeFontFace.xs: implemented:
		gnome_font_face_find,
		gnome_font_face_find_closest,
		gnome_font_face_find_closest_from_weight_slant,
		gnome_font_face_find_closest_from_pango_font,
		gnome_font_face_find_closest_from_pango_description,
		gnome_font_face_find_from_family_and_style,
		gnome_font_face_get_font,
		gnome_font_face_get_font_default,
		gnome_font_face_is_italic,
		gnome_font_face_is_fixed_width,
		gnome_font_face_get_ascender,
		gnome_font_face_get_descender,
		gnome_font_face_get_underline_position,
		gnome_font_face_get_underline_thickness,
		gnome_font_face_get_num_glyphs,
		gnome_font_face_get_glyph_width,
		gnome_font_face_get_glyph_kerning
	
2003/09/06 19:23 rwmcfa1

	* Makefile.PL: dist-rpms build target added

	* perl-Gnome2-Prins.spec.in: initial import

2003/09/02 09:45 rwmcfa1

	* xs/GnomeFont.xs: xsubpp wants a blank line between each function,
	at least mine/most do. a couple of the ones commited below didn't have
	them.

2003/08/29 15:26 ebassi

	* xs/GnomeFont.xs: implemented more font size methods: 
	  	gnome_font_get_glyph_width,
	  	gnome_font_get_ascender,
	  	gnome_font_get_descender,
	  	gnome_font_get_underline_position,
	  	gnome_font_get_underline_thickness,
		gnome_font_get_width_utf8,
		gnome_font_get_width_utf8_sized
	* examples/basic-font.pl: changed the searched font name to
	  "Monospace Regular".
	
2003/08/23 10:25 ebassi
	
	* pm/Config.pm, pm/Font.pm: corrected some typos in the pod